[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { features = ["js"], version = "0.2.6" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rayon = "1.5.2"
rand_chacha = "0.3.1"

reqwest = { version = "0.11", features = ["blocking"], optional = false }

serde = { version = "1.0", features = ["derive"], optional = false }
actix-web = { version = "4.2.1", optional = false }
actix-cors = { version = "0.6.1", optional = false }
actix-files = "0.6.2"
futures = { version = "0.3", optional = false }
uuid = { version = "1.0.0", features = ["v4"], optional = false }

spiral-rs = { path="../../components/spiral-rs" }